# qrCodeGenerator

./: CMakeLists.txt  LICENSE  README.md
src/data/: CMakeLists.txt
src/data/include/data/: HistoryDataProvider.h
src/data/src/: HistoryDataProvider.cpp
src/domain/: CMakeLists.txt
src/domain/include/domain/: IHistoryDataProvider.h
src/domain/include/domain/entity/: Entity.h  History.h
src/qmlapp/: CMakeLists.txt  main.cpp
src/qmlapp/core/: Entity.h  Painter.cpp  Painter.h  Utils.h
src/qmlapp/presentation/: HistoryModel.cpp  HistoryModel.h  HistoryPresenter.cpp  HistoryPresenter.h  QrCodePresenter.cpp  QrCodePresenter.h  SettingsPresenter.cpp  SettingsPresenter.h
src/qmlapp/qml/: BaseInjectorPage.qml  MainScreen.qml  SettingsScreen.qml  TemplatesScreen.qml  main.qml
src/qmlapp/qml/Entity/: TemplatesEnum.qml  TemplatesModel.qml
src/qmlapp/qml/Popups/: CryptoPopup.qml  EmailPopup.qml  GeoPopup.qml  HistoryPopup.qml  PopupLoader.qml  PopupTemplate.qml  SimpleTextPopup.qml  SmsPopup.qml  SocialMediaPopup.qml  UrlPopup.qml  VCardPopup.qml  VEventPopup.qml  WifiPopup.qml
src/qmlapp/usecase/: Entity.h  GenerationUsecase.cpp  GenerationUsecase.h  HistoryUsecase.cpp  HistoryUsecase.h  PrintingUsecase.cpp  PrintingUsecase.h  QrCodeUsecase.cpp  QrCodeUsecase.h  SettingsUsecase.cpp  SettingsUsecase.h
src/qmlinjector/: CMakeLists.txt
src/qmlinjector/include/qmlinjector/: qmlinjector.h  qmlinjectorbuilder.h  qmlobjectcreator.h
src/qmlinjector/src/: qmlinjector.cpp  qmlobjectcreator.cpp
src/qrcodegen/: CMakeLists.txt
src/qrcodegen/src/: qrcodegen.cpp
